# liveask

./: .dockerignore  .gitignore  .terraformignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION.md  Cargo.toml  Cranky.toml  LICENSE  README.md  RELEASE-PROCESS.md  justfile
.github/: FUNDING.yml
.github/actions/check_be/: action.yml
.github/actions/check_fe/: action.yml
.github/actions/check_udeps/: action.yml
.github/actions/deploy_ecs/: action.yml
.github/workflows/: be_beta.yml  beta.yml  ci.yml  e2e.yml  fe_beta.yml  fe_prod.yml  nightly.yml  prod_be.yml  prod_cd.yml  prod_cd_be.yml  prod_fe.yml  push.yml
async-redis-session/: Cargo.toml  README.md
async-redis-session/src/: lib.rs
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Makefile.toml  TODO.md  build.rs  default.env  default.env.template  docker-compose.local.yml  docker-compose.yml  ev-eventexample.json  justfile  mail_template.html  mail_template.html.hbs
backend-e2e/: Cargo.toml  Dockerfile  Makefile  docker-compose.yml  justfile
backend-e2e/src/: main.rs
backend/env/: default.env
backend/src/: app.rs  auth.rs  ecs_task_id.rs  env.rs  error.rs  handle.rs  mail.rs  main.rs  password_header.rs  plots.rs  redis_pool.rs  ses.rs  signals.rs  stripe_webhooks.rs  tracking.rs  utils.rs  weeme.rs
backend/src/eventsdb/: dynamo.rs  error.rs  in_memory.rs  mod.rs  types.rs
backend/src/eventsdb/types/: conversion.rs  mod.rs
backend/src/eventsdb/types/conversion/: context.rs  eventdata.rs  mod.rs  questions.rs  tags.rs  tokens.rs
backend/src/payment/: error.rs  mod.rs
backend/src/pubsub/: in_memory.rs  mod.rs  redis.rs
backend/src/tracking/: error.rs  mod.rs
backend/src/viewers/: mod.rs  redis.rs
backend/tf/: .gitignore  alb.tf  backend.tf  ecs.tf  ecs_exec_role.tf  ecs_task_role.tf  log.tf  main.tf  output.tf  redis.tf  route53.tf  task.json  variables.tf  variables_sensitive.tf  vpc.tf
e2e-playwright/: .gitignore  Dockerfile  README.md  docker-compose.e2e.yml  globalSetup.ts  justfile  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e-playwright/docker/: entrypoint.sh
e2e-playwright/fixtures/: admin.ts  backend.ts  event.ts
e2e-playwright/helpers/: app.ts  env.ts  net.ts  selectors.ts
e2e-playwright/tests/: admin.spec.ts  moderation.spec.ts  password.spec.ts  premium.spec.ts  realtime.spec.ts  reconnect-spike.spec.ts  reconnect.spec.ts  smoke.spec.ts
frontend/: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  TODO.md  Trunk.toml  build.rs  index.html  index.html.hbs  justfile
frontend/events/: Cargo.toml
frontend/events/src/: lib.rs
frontend/inline-assets/: privacy.html
frontend/scss/: add-tag-popup.scss  all.scss  app.scss  buttons.scss  color-popup.scss  colors.scss  context-popup.scss  delete-popup.scss  event-meta.scss  event.scss  footer.scss  iconbar.scss  index.scss  meta-popup.scss  newevent.scss  newquestion.scss  payment.scss  popup.scss  privacy.scss  pwd-popup.scss  pwd.scss  question-card.scss  questions.scss  share.scss  styles.scss  subscribe.scss  tag-select.scss  tags.scss  text-macros.scss  trustedby.scss  upgrade.scss
frontend/src/: cloud.rs  environment.rs  fetch.rs  global_events.rs  lib.rs  local_cache.rs  pwd.rs  routes.rs  tracking.rs
frontend/src/agents/: events.rs  mod.rs  wordcloud.rs  ws_agent.rs
frontend/src/components/: buttons.rs  context_popup.rs  delete_popup.rs  event_context.rs  event_meta.rs  footer.rs  iconbar.rs  meta_popup.rs  mod.rs  mod_color.rs  mod_password.rs  mod_tag.rs  mod_tags.rs  password_popup.rs  payment_popup.rs  popup.rs  qr.rs  question.rs  question_popup.rs  share_popup.rs  socket.rs  spinner.rs  tag_select.rs  tags.rs  textarea.rs  trusted_by.rs  upgerade_button.rs  upgrade.rs
frontend/src/pages/: admin.rs  admin_login.rs  event.rs  home.rs  mod.rs  newevent.rs  print.rs  privacy.rs  subscribe.rs
frontend/tauri/: Cargo.toml  README.md  tauri.conf.json
frontend/worker/: Cargo.toml  build.rs
frontend/worker/src/: cloud.rs  lib.rs  pwd.rs  wordcloud.rs
shared/: Cargo.toml
shared/src/: flags.rs  lib.rs  validation.rs
shared/src/validation/: add_question.rs  context_validation.rs  create_event.rs  mod.rs  pwd_validation.rs  tag_validation.rs
