[workspace]
members = [
    "async-redis-session",
    "backend",
    "backend-e2e",
    "frontend",
    "frontend/events",
    "frontend/worker",
    "shared",
]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'   # Optimize for size.
codegen-units = 1

[workspace.lints.rust]
warnings = "deny"
unused_imports = "deny"
unused_must_use = "deny"
unused_variables = "deny"
unused_mut = "deny"
dead_code = "deny"

[workspace.lints.clippy]
all = "deny"
perf = "deny"
correctness = "deny"
complexity = "deny"
style = "deny"
nursery = "deny"
pedantic = "deny"
# selected clippy::restriction (see https://rust-lang.github.io/rust-clippy/master/index.html#/?groups=restriction)
# it is recommended to enable individually based on style and requirements
as_underscore = "deny"
assertions_on_result_states = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
dbg_macro = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "deny"
empty_drop = "deny"
empty_structs_with_brackets = "deny"
exit = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
get_unwrap = "deny"
integer_division = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
mixed_read_write_in_expression = "deny"
mutex_atomic = "deny"
needless_raw_strings = "deny"
non_ascii_literal = "deny"
panic = "deny"
print_stderr = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
string_to_string = "deny"
suspicious_xor_used_as_pow = "deny"
todo = "deny"
try_err = "deny"
unimplemented = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
if_then_some_else_none = "deny"
partial_pub_fields = "deny"
print_stdout = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_debug = "deny"
#
# which are these?
expect_used = "deny"
needless_update = "deny"
match_like_matches_macro = "deny"
from_over_into = "deny"
useless_conversion = "deny"
verbose_file_reads = "deny"

# exceptions
module_name_repetitions = "allow"
