[package]
name = "backend_tests"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
shared = { path = "../shared" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tungstenite = { version = "0.17", features = ["native-tls"]}
serde_json = "1"
env_logger = "0.9"