[package]
name = "backend_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tungstenite = { version = "0.19", features = ["native-tls"] }

[dev-dependencies]
pretty_assertions = "1"
