[package]
name = "backend_tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[lints]
workspace = true

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tungstenite = { version = "0.20", features = ["native-tls"] }

[dev-dependencies]
pretty_assertions = "1"
tracing = "0.1"
tracing-test = "0.2"
