[package]
name = "liveask-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
async-redis-session = { path = "../async-redis-session" }
async-trait = "0.1"
aws-config = "0.55"
aws-sdk-dynamodb = "0.28"
axum = { version = "0.6", features = ["ws"] }
# axum-login = "0.5"
axum-login = { git = "https://github.com/maxcountryman/axum-login.git", rev = "45a33debddedee9e1138b32cf3d7b6ba6e290449" }
axum-sessions = "0.5"
chrono = { version = "0.4", default-features = false }
deadpool-redis = { version = "0.12", default-features = false, features = ["rt_tokio_1"] }
futures-util = "0.3"
mailjet-rs = "0.3" 
paypal-rust = "0.0.9-alpha"
rand = { version = "0.8", features = ["min_const_gen"] }
redis = { version = "0.23", default-features = false, features = ["tokio-comp","connection-manager"] }
reqwest = { version = "0.11", features = ["json"] }
sentry = { version = "0.31", features = ["tracing", "tower", "tower-http"] }
serde = "1" 
serde_json = "1"
shared = { path = "../shared" }
thiserror = "1.0"
tinyurl-rs = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace", "auth", "sensitive-headers"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1.0"

[dev-dependencies]
env_logger = "0.10"
mime = "0.3"
mockall = "0.11"
pretty_assertions = "1"

[build-dependencies]
anyhow = "1"
vergen = { version = "8", features = ["git","gitcl"] }
