[package]
name = "liveask-server"
version = "0.1.0"
edition = "2024"
build = "build.rs"
rust-version = "1.85"
# ############################

[dependencies]
async-posthog = { git = "https://github.com/rivet-gg/posthog-rs.git", rev = "fa4d39a" }
async-redis-session = { path = "../async-redis-session" }
async-stripe = { version = "0.31", default-features = false, features = [
    "checkout",
    "webhook-events",
    "connect",
    "runtime-tokio-hyper",
] }
async-trait = "0.1"
aws-config = "1.0"
aws-sdk-dynamodb = "1.2"
aws-sdk-ses = "1.2"
aws-smithy-http = "0.60"
axum = { version = "0.6", features = ["ws"] }
axum-login = "0.6"
axum-sessions = "0.5"
chrono = { workspace = true }
futures-util = "0.3"
handlebars = { workspace = true }
posthog-core = { git = "https://github.com/rivet-gg/posthog-rs.git", rev = "fa4d39a" }
rand = { version = "0.8", features = ["min_const_gen"] }
reqwest = { version = "0.11", features = ["json"] }
sentry = { version = "0.31", features = ["tracing", "tower", "tower-http"] }
serde = { workspace = true }
serde_dynamo = { version = "4.2", default-features = false, features = [
    "aws-sdk-dynamodb+1",
] }
serde_json = { workspace = true }
shared = { path = "../shared" }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1.0"

[dependencies.deadpool-redis]
version = "0.13"
default-features = false
features = ["rt_tokio_1"]

[dependencies.redis]
version = "0.23"
default-features = false
features = ["tokio-comp", "connection-manager"]

[dependencies.tower-http]
version = "0.4"
features = ["cors", "trace", "auth", "sensitive-headers"]
# ############################

[build-dependencies]
vergen-gitcl = "1.0"
# ############################

[dev-dependencies]
axum-test = "13.1"
mime = "0.3"
mockall = "0.11"
pretty_assertions = "1"
tracing-test = "0.2"

[lints]
workspace = true
