[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
bitflags = "2.4"
chrono = { version = "0.4", default-features = false }
console_error_panic_hook = "0.1"
const_format = "0.2"
csv = "1.2"
easy-cast = "0.5"
events = { path = "events" }
gloo-storage = "0.2"
gloo-timers = "0.2"
gloo-utils = "0.1"
js-sys = "0.3"
konst = "0.3"
# logging
log = "0.4"
qrcode = "0.12"
serde = "1"
serde_json = "1"
shared = { path = "../shared" }
split-iter = "0.1"
urlencoding = "2.1"
wasm-bindgen = "=0.2.89"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
wasm-sockets = "1.0"
worker2 = { path = "worker" }
yew = { version = "0.20", features = ["csr"] }
yew-agent = "0.2"
yew-router = "0.17"
yewdux = "0.9"

[dependencies.web-sys]
version = "0.3"
features = [
    "Clipboard",
    "Navigator",
    "Document",
    "Window",
    "DomRect",
    "CssStyleDeclaration",
    "Request",
    "RequestInit",
    "RequestCredentials",
    "RequestMode",
    "Response",
    "Headers",
    "DomTokenList",
    "HtmlSelectElement",
    "HtmlAnchorElement",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "ScrollBehavior",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[build-dependencies]
anyhow = "1"
handlebars = "4.4"
konst = "0.3"
vergen = { version = "8", features = ["git", "gitcl", "build"] }
