[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.74"

[lints]
workspace = true

[dependencies]
anyhow = "1"
base64 = "0.21"
bitflags = "2.4"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "wasmbind",
] }
console_error_panic_hook = "0.1"
const_format = "0.2"
csv = "1.2"
easy-cast = "0.5"
events = { path = "events" }
gloo-storage = "0.3"
gloo-timers = "0.3"
gloo-utils = "0.2"
konst = "0.3"
log = "0.4"
qrcode = "0.13"
serde = "1"
serde_json = "1"
sha2 = "0.10"
shared = { path = "../shared" }
split-iter = "0.1"
url = "2.5"
urlencoding = "2.1"
wasm-bindgen = "=0.2.93"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
wasm-sockets = "1.0"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yewdux = "0.10"

[dependencies.web-sys]
version = "0.3"
features = [
    "Clipboard",
    "Navigator",
    "Document",
    "Window",
    "DomRect",
    "CssStyleDeclaration",
    "Request",
    "RequestInit",
    "RequestCredentials",
    "RequestMode",
    "Response",
    "Headers",
    "DomTokenList",
    "HtmlSelectElement",
    "HtmlAnchorElement",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "ScrollBehavior",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[build-dependencies]
anyhow = "1"
handlebars = "4.4"
konst = "0.3"
vergen = { version = "8", features = ["git", "gitcl", "build"] }
