[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[lints]
workspace = true

[dependencies]
bitflags = { version = "2.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
url = "2.5"
email_address = "0.2.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "wasmbind",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
