[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
bitflags = { version = "2.4", features = ["serde"] }
email_address = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
url = "2.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "wasmbind",
] }

[lints]
workspace = true
