[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.21"
chrono = "0.4"
console_error_panic_hook = "0.1"
image = "0.24"
lazy_static = "1.4"
log = "0.4"
regex = "1.7"
serde = "1"
sha2 = "0.10"
wasm-logger = "0.2"
# see https://github.com/liveask/liveask/issues/31
wordcloud-rs = "=0.1.11"
yew-agent = "0.1"

[package.metadata.cargo-udeps.ignore]
normal = ["wasm-logger"]
