[package]
name = "worker2"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"

[lints]
workspace = true

[dependencies]
anyhow = "1"
base64 = "0.21"
chrono = "0.4"
console_error_panic_hook = "0.1"
image = "0.24"
lazy_static = "1.4"
getrandom = { version = "0.2", features = ["js"] }
gloo-worker = "0.1"
log = "0.4"
regex = "1.7"
serde = "1"
sha2 = "0.10"
wasm-logger = "0.2"
# see https://github.com/liveask/liveask/issues/31
wordcloud-rs = "=0.1.11"
yew-agent = "0.2"

[build-dependencies]
anyhow = "1"
vergen = { version = "8", features = ["git", "gitcl", "build"] }
